[package]
name = "mywasm"
version = "0.1.0"
authors = ["张文光 <wenguangzhang@caixin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.3"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.64"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event"
]